--- a/wp-content/themes/external-blogg/stylesheets/extends.scss
+++ b/wp-content/themes/external-blogg/stylesheets/extends.scss
@@ -39,13 +39,13 @@ p.body-copy {
 }
 p.preamble-body-copy {
   font-weight: bold;
-  font-family: $sansSerif;
+  font-family: $sans-serif;
   font-size: emize(16);
   line-height: emize(21, 16);
 }
 
 h1.aside {
-  font-family: $sansSerif;
+  font-family: $sans-serif;
   font-size: emize(16);
   font-weight: bold;
   line-height: 1.2;
