--- a/wp-content/themes/external-blogg/stylesheets/comments.scss
+++ b/wp-content/themes/external-blogg/stylesheets/comments.scss
@@ -31,7 +31,7 @@
   }
   .commentmetadata {
     margin: .3em 0;
-    font-family: $sansSerif;
+    font-family: $sans-serif;
     font-size: emize(12);
     line-height: 1.3;
   }
@@ -44,7 +44,7 @@
       height: auto;
     }
     cite, .says {
-      font-family: $sansSerif;
+      font-family: $sans-serif;
       font-size: emize(14);
       line-height: 1.3;
       font-style: normal;
