--- a/wp-content/themes/external-blogg/stylesheets/single.scss
+++ b/wp-content/themes/external-blogg/stylesheets/single.scss
@@ -6,7 +6,7 @@
   .meta {
     @include columns(3, false, 4%);
     .author {
-      font-family: $sansSerif;
+      font-family: $sans-serif;
       font-size: emize(14);
       margin-bottom: .8em;
       img {
@@ -16,7 +16,7 @@
       }
     }
     time {
-      font-family: $sansSerif;
+      font-family: $sans-serif;
       font-size: emize(12);
     }
   }
@@ -56,7 +56,7 @@
   }
 
   .featured-image .caption, .wp-caption .wp-caption-text {
-    font-family: $sansSerif;
+    font-family: $sans-serif;
     font-size: emize(14);
     margin-bottom: 0;
   }
@@ -77,7 +77,7 @@
     li {
       display: inline;
       margin: 0;
-      font-family: $sansSerif;
+      font-family: $sans-serif;
       font-size: emize(12);
     }
     li:first-child {
@@ -92,7 +92,7 @@
   .edit {
     margin: 2.5em 0 1em;
     a {
-      color: black;
+      color: #000;
       &:hover {
         text-decoration: none;
       }
@@ -106,7 +106,7 @@
         font-weight: bold;
         display: inline;
         &::after {
-          content: ": ";
+          content: ': ';
           margin-right: .3em;
         }
       }
