Replaced local sass utils with bower package

--- a/wp-content/themes/external-blogg/stylesheets/application.scss
+++ b/wp-content/themes/external-blogg/stylesheets/application.scss
@@ -1,7 +1,4 @@
-@import 'variables',
-        'mixins',
-        'functions',
-        'extends',
+@import '../vendor/malmo_shared_assets/stylesheets/malmo_external',
         'grid',
         'single',
         'comments',
