--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -1,45 +1,22 @@
-h1.body-copy, .loop h1.page-title {
+.loop h1.page-title {
   font-weight: normal;
   font-size: 2.25em;
   line-height: 1.11111em;
   margin: 0 0 .3em; }
   @media (max-width: 26em) {
-    h1.body-copy, .loop h1.page-title {
+    .loop h1.page-title {
       font-size: 1.75em; } }
 
-h2.body-copy, .loop .post h1 {
+.loop .post h1 {
   font-weight: normal;
   font-size: 1.5em;
   line-height: 1.20833em;
   margin: 1.5em 0 .2em; }
   @media (max-width: 26em) {
-    h2.body-copy, .loop .post h1 {
+    .loop .post h1 {
       font-size: 1.375em; } }
 
-h3.body-copy {
-  font-weight: bold;
-  font-size: 1.0625em;
-  line-height: 1.47059em;
-  margin: 1.5em 0 0; }
-
-h4.body-copy {
-  font-weight: normal;
-  font-style: italic;
-  font-size: 1.0625em;
-  line-height: 1.47059em;
-  margin: 1.5em 0 0; }
-
-p.body-copy {
-  font-size: 1.0625em;
-  line-height: 1.47059em; }
-
-p.preamble-body-copy {
-  font-weight: bold;
-  font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
-  font-size: 1em;
-  line-height: 1.3125em; }
-
-h1.aside, .single .post #reply-title, #comments h1 {
+.single .post #reply-title, #comments h1 {
   font-size: 1em;
   font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-weight: bold;
