IE CSS clear left fixes

--- a/wp-content/themes/external-blogg/stylesheets/archive.scss
+++ b/wp-content/themes/external-blogg/stylesheets/archive.scss
@@ -1,5 +1,6 @@
 main {
   &.categories, &.archive, &.authors, &.help, &.tags {
+    clear: left;
     nav {
       li {
         font-size: emize(14);
