--- a/wp-content/themes/master/stylesheets/post.scss
+++ b/wp-content/themes/master/stylesheets/post.scss
@@ -46,8 +46,11 @@ article {
     height: auto;
     margin-bottom: .2em!important;
   }
-  img {
+  img, .wp-caption {
     max-width: 100%;
+  }
+  img {
+    height: auto;
   }
   .entry-tags, .entry-meta {
     margin: 0 0 .2em;
