Replicated changes made in blue branch in august: floating caption blocks, admin avatars and portwise plugin setting ldap flag

--- a/wp-content/themes/master/stylesheets/admin.css
+++ b/wp-content/themes/master/stylesheets/admin.css
@@ -16,3 +16,8 @@
   float: left;
   min-height: 28px;
 }
+
+.column-author img, .column-username img, .column-comment .comment-author img {
+  width: 32px;
+  height: 32px;
+}
