Replicated changes made in blue branch in august: floating caption blocks, admin avatars and portwise plugin setting ldap flag

--- a/wp-content/themes/hr/stylesheets/post.scss
+++ b/wp-content/themes/hr/stylesheets/post.scss
@@ -27,7 +27,10 @@ article {
     height: auto;
     margin: .3em 0 1em 1em;
   }
+  img, .wp-caption {
+     max-width: 100%;
+   }
   img {
-    max-width: 100%;
+    height: auto;
   }
 }
