--- a/wp-content/themes/master/editor-style.css
+++ b/wp-content/themes/master/editor-style.css
@@ -226,18 +226,21 @@ h1 {
   font-size: 28px;
   line-height: 1.1;
   margin: 0 0 .2em;
+	color: #000;
 }
 h2 {
   font-weight: normal;
   font-size: 22px;
   line-height: 1;
   margin: 0;
+	color: #000;
 }
 h3 {
   font-weight: bold;
   font-size: 17px;
   line-height: 21px;
   margin: 0;
+	color: #000;
 }
 h4 {
   font-weight: normal;
@@ -245,10 +248,12 @@ h4 {
   font-size: 17px;
   line-height: 21px;
   margin: 0;
+	color: #000;
 }
 p {
   font-size: 17px;
   line-height: 21px;
+	color: #000;
 }
 p.preamble {
   font-weight: bold;
