--- a/wp-content/themes/external-blogg/style.css
+++ b/wp-content/themes/external-blogg/style.css
@@ -3,9 +3,11 @@ Theme Name:External Blog
 Theme URI: http://www.malmo.se/blogg
 Description: Child theme for Malmö stad's external blog
 Author: Malmö stad
-Template: master
 */
 
 /*
-Use the Sass to generate master and child CSS. See style.css in master theme.
+Use the Sass to generate CSS
+
+  $ sass --watch stylesheets/application.scss
+  $ sass --watch --style compressed  stylesheets/application.scss
 */
