--- a/wp-content/themes/internal-blog/style.css
+++ b/wp-content/themes/internal-blog/style.css
@@ -3,5 +3,5 @@ Theme Name:Internal Blog
 Theme URI: http://komin.malmo.se/blogg
 Description: Child theme for Malmö stad's internal blog
 Author: Malmö stad
-Template: external-blogg
+Template: external-blog
 */
