--- a/wp-content/themes/external-blog/stylesheets/application.scss
+++ b/wp-content/themes/external-blog/stylesheets/application.scss
@@ -4,4 +4,7 @@
         'comments',
         'loop',
         'archive',
-        'aside';
+        'aside',
+        'vote',
+        'media-queries',
+        'print';
