--- a/wp-content/themes/master-2.0/style.css
+++ b/wp-content/themes/master-2.0/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Master
+Theme Name: Master 2.0
 Theme URI: http://www.malmo.se/wag/
 Description: Main theme for Malmö stad's internal news
 Author: Malmö stad
-Version: 1.2
+Version: 2.0
 */
 
 /*
