--- a/wp-content/themes/master/style.css
+++ b/wp-content/themes/master/style.css
@@ -3,6 +3,7 @@ Theme Name: Master
 Theme URI: http://malmo.se/
 Description: Master theme for blog and news
 Author: Malmö stad
+Version: 4.0
 */
 
 /*
