--- a/wp-content/themes/internal-blog/style.css
+++ b/wp-content/themes/internal-blog/style.css
@@ -4,4 +4,5 @@ Theme URI: http://komin.malmo.se/blogg
 Description: Child theme for Malmö stad's internal blog
 Author: Malmö stad
 Template: master
+Version: 4.0
 */
