--- a/wp-content/themes/master/stylesheets/single.scss
+++ b/wp-content/themes/master/stylesheets/single.scss
@@ -179,6 +179,6 @@
   }
 }
 
-.mf-v4 .dropdown-menu li {
-  font-size: emize(14, 11);
+.mf-v4 .author .dropdown-menu li {
+  font-size: emize(14, 12);
 }
