Hooked the news theme to the new master

--- a/wp-content/themes/internal-news/style.css
+++ b/wp-content/themes/internal-news/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Internal News
-Theme URI: http://komin.malmo.se/
+Theme URI: http://komin.malmo.se/nyheter
 Description: Child theme for Malmö stad's internal news
 Author: Malmö stad
 Template: master
