--- a/wp-content/themes/master-2.0/style.css
+++ b/wp-content/themes/master-2.0/style.css
@@ -7,6 +7,6 @@ Version: 2.0
 */
 
 /*
-Use the Sass file stylesheets/application.scss for styles and transform it with:
+Use Sass file stylesheets/application.scss for styles and transform it with:
 $ sass --watch stylesheets/application.scss
 */
