--- a/wp-content/themes/internal-news/style.css
+++ b/wp-content/themes/internal-news/style.css
@@ -7,7 +7,7 @@ Template: master
 */
 
 /*
-Use the Sass to generate CSS **within** the child theme
+Use Sass to generate CSS **within** the child theme
 
 During development:
   $ sass --watch --style expanded stylesheets/application.scss
