--- a/wp-content/themes/internal-news/stylesheets/application.scss
+++ b/wp-content/themes/internal-news/stylesheets/application.scss
@@ -1,2 +1,3 @@
 @import '../../master/stylesheets/application';
-@import 'theme'; // Sass for this child theme only
+@import 'grid';
+@import 'loop';
