--- a/wp-content/themes/master/stylesheets/loop.scss
+++ b/wp-content/themes/master/stylesheets/loop.scss
@@ -37,7 +37,7 @@
         img {
           width: 100%;
           height: auto;
-          border: none;
+          border: 0;
         }
       }
       time {
