--- a/wp-content/themes/internal-news/stylesheets/grid.scss
+++ b/wp-content/themes/internal-news/stylesheets/grid.scss
@@ -9,3 +9,9 @@ main {
 aside {
   @include columns(4, true, 5%);
 }
+
+@media ( max-width: 50em ) {
+  main, aside {
+    @include columns(12);
+  }
+}
