--- a/wp-content/themes/internal-news/stylesheets/grid.scss
+++ b/wp-content/themes/internal-news/stylesheets/grid.scss
@@ -10,8 +10,9 @@ aside {
   @include columns(4, true, 5%);
 }
 
-@media ( max-width: 50em ) {
-  main, aside {
+@media (max-width: 50em) {
+  main,
+  aside {
     @include columns(12);
   }
 }
