--- a/wp-content/themes/internal-news/stylesheets/single.scss
+++ b/wp-content/themes/internal-news/stylesheets/single.scss
@@ -20,7 +20,11 @@
     .entry-meta,
     .entry-tags {
       display: block;
-      margin: 0;
+      margin: 0 0 1em 0;
+      &::after {
+        display: none;
+        content: none;
+      }
       dt, dd {
         font-family: $sans-serif;
         margin: 0;
@@ -38,8 +42,8 @@
         li:first-child {
           font-weight: normal;
           &::after {
+            display: none;
             content: none;
-            margin: 0;
           }
         }
       }
