--- a/wp-content/themes/external-blog/style.css
+++ b/wp-content/themes/external-blog/style.css
@@ -8,13 +8,5 @@ Version: 4.0
 */
 
 /*
-Use Sass to generate CSS **within** the child theme
-
-During development:
-  $ sass --watch --style expanded stylesheets/application.scss
-
-Build for deploy:
-  $ sass --style compressed  stylesheets/application.scss > stylesheets/application.css
-
-This will include both the master and the child theme Sass files
+See the README.md for instructions on how to compile Sass files for master and child theme.
 */
