--- a/wp-content/themes/internal-news/style.css
+++ b/wp-content/themes/internal-news/style.css
@@ -4,16 +4,9 @@ Theme URI: http://komin.malmo.se/nyheter
 Description: Child theme for Malmö stad's internal news
 Author: Malmö stad
 Template: master
+Version: 4.0
 */
 
 /*
-Use Sass to generate CSS **within** the child theme
-
-During development:
-  $ sass --watch --style expanded stylesheets/application.scss
-
-Build for deploy:
-  $ sass --style compressed stylesheets/application.scss > stylesheets/application.css
-
-This will include both the master and the child theme Sass files
+See the README.md for instructions on how to compile Sass files for master and child theme.
 */
