--- a/wp-content/themes/master/stylesheets/aside.scss
+++ b/wp-content/themes/master/stylesheets/aside.scss
@@ -18,7 +18,7 @@ aside {
     ul {
       margin-bottom: 1em;
       &:last-child {
-        margin-bottom: 0em;
+        margin-bottom: 0;
       }
     }
     p {
@@ -53,7 +53,7 @@ aside {
       time {
         clear: both;
         display: block;
-        margin-top: .2em;
+        margin: .2em 0;
         font-family: $sans-serif;
         font-size: emize(12, 14);
       }
