--- a/wp-content/themes/internal-blog/stylesheets/application.css
+++ b/wp-content/themes/internal-blog/stylesheets/application.css
@@ -119,6 +119,9 @@ aside {
   font-family: "OpenSans", "Droid Sans", "Verdana", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-size: 0.75em;
 }
+.single .post .box {
+  clear: both;
+}
 .single .post .alignright, .single .post .aligncenter {
   float: right;
   margin: .3em 0 1em 1em;
@@ -382,6 +385,9 @@ aside {
   font-family: "OpenSans", "Droid Sans", "Verdana", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-size: 0.875em;
 }
+.loop .post a {
+  color: #000;
+}
 .loop .post .entry-meta {
   width: 22.75%;
   margin-right: 3%;
@@ -394,7 +400,6 @@ aside {
 }
 .loop .post .entry-meta .author {
   margin-bottom: .2em;
-  color: #007896;
   font-size: 0.875em;
 }
 @media (max-width: 32em) {
@@ -402,20 +407,18 @@ aside {
     font-size: 0.75em;
   }
 }
-.loop .post .entry-meta .avatar {
-  margin-top: .2em;
+.loop .post .entry-meta .author a {
+  color: #007896;
 }
-.loop .post .entry-meta .avatar img {
+.loop .post .entry-meta img {
+  margin-top: .2em;
   width: 100%;
   height: auto;
-  border: none;
+  border: 0;
 }
 .loop .post .entry-meta time {
   display: block;
   font-size: 0.75em;
-}
-.loop .post a {
-  color: #000;
 }
 .loop .post a:hover {
   text-decoration: none;
@@ -451,7 +454,11 @@ aside nav.basic ul {
   margin-bottom: 1em;
 }
 aside nav.basic ul:last-child {
-  margin-bottom: 0em;
+  margin-bottom: 0;
+}
+aside nav.basic p {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-size: 0.8125em;
 }
 aside .latest-posts li {
   *zoom: 1;
@@ -473,12 +480,12 @@ aside .latest-posts .featured-image {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  background-color: transparent;
+  margin-top: 0.25em;
 }
 aside .latest-posts .featured-image img {
-  margin-top: 0.25em;
   width: 100%;
   height: auto;
+  background: #f5f5f5;
 }
 aside .latest-posts .text {
   width: 73.75%;
@@ -490,7 +497,7 @@ aside .latest-posts .text {
   box-sizing: border-box;
 }
 aside .latest-posts .text h2 {
-  font-size: 1.07143em;
+  font-size: 0.92857em;
   line-height: 1.3;
   font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
   font-weight: normal;
@@ -499,7 +506,7 @@ aside .latest-posts .text h2 {
 aside .latest-posts .text time {
   clear: both;
   display: block;
-  margin-top: .2em;
+  margin: .2em 0;
   font-family: "OpenSans", "Droid Sans", "Verdana", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-size: 0.85714em;
 }
@@ -609,6 +616,9 @@ aside .widget-area p {
   #respond, .service-title, .btn, .vote-box, .feed {
     display: none !important;
   }
+}
+body.home .page-title {
+  display: none;
 }
 
 /*# sourceMappingURL=application.css.map */
