--- a/wp-content/themes/internal-news/stylesheets/application.css
+++ b/wp-content/themes/internal-news/stylesheets/application.css
@@ -385,6 +385,9 @@ aside {
   font-family: "OpenSans", "Droid Sans", "Verdana", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
   font-size: 0.875em;
 }
+.loop .post a {
+  color: #000;
+}
 .loop .post .entry-meta {
   width: 22.75%;
   margin-right: 3%;
@@ -397,7 +400,6 @@ aside {
 }
 .loop .post .entry-meta .author {
   margin-bottom: .2em;
-  color: #007896;
   font-size: 0.875em;
 }
 @media (max-width: 32em) {
@@ -405,10 +407,11 @@ aside {
     font-size: 0.75em;
   }
 }
-.loop .post .entry-meta .avatar {
-  margin-top: .2em;
+.loop .post .entry-meta .author a {
+  color: #007896;
 }
-.loop .post .entry-meta .avatar img {
+.loop .post .entry-meta img {
+  margin-top: .2em;
   width: 100%;
   height: auto;
   border: 0;
@@ -416,9 +419,6 @@ aside {
 .loop .post .entry-meta time {
   display: block;
   font-size: 0.75em;
-}
-.loop .post a {
-  color: #000;
 }
 .loop .post a:hover {
   text-decoration: none;
@@ -458,7 +458,7 @@ aside nav.basic ul:last-child {
 }
 aside nav.basic p {
   font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-size: 13px;
+  font-size: 0.8125em;
 }
 aside .latest-posts li {
   *zoom: 1;
@@ -497,7 +497,7 @@ aside .latest-posts .text {
   box-sizing: border-box;
 }
 aside .latest-posts .text h2 {
-  font-size: 1.07143em;
+  font-size: 0.92857em;
   line-height: 1.3;
   font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
   font-weight: normal;
@@ -682,6 +682,12 @@ aside {
   height: auto;
 }
 
+.single .post time {
+  display: block;
+  font-family: "OpenSans", "Droid Sans", "Verdana", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
+  font-size: 0.875em;
+  margin-bottom: 1em;
+}
 .single .post .meta {
   width: 100%;
   margin-right: 2%;
