--- a/wp-content/themes/internal-news/stylesheets/single.scss
+++ b/wp-content/themes/internal-news/stylesheets/single.scss
@@ -1,4 +1,10 @@
 .single .post {
+  time {
+    display: block;
+    font-family: $sans-serif;
+    font-size: emize(14);
+    margin-bottom: 1em;
+  }
   .meta {
     @include columns(12);
     .author {
