--- a/wp-content/themes/master/stylesheets/loop.scss
+++ b/wp-content/themes/master/stylesheets/loop.scss
@@ -16,6 +16,7 @@
       p {
         margin: 0 0 .2em;
       }
+      .published,
       .comments-link {
         font-family: $sans-serif;
         font-size: emize(14);
