Forced bold in body copy to display as normal weight in editor

--- a/wp-content/themes/master/editor-style.css
+++ b/wp-content/themes/master/editor-style.css
@@ -129,6 +129,11 @@ p {
   line-height: 25px;
   margin-top: 0;
 }
+
+body.webkit p strong {
+	font-weight: normal !important;
+}
+
 p.preamble {
   font-weight: bold;
   font-family: 'OpenSans', 'Verdana', 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
